# Bayes_For_Days

./: .gitignore  BAYES_FOR_DAYS_REVOLUTIONARY_PLATFORM_COMPLETE.md  DEMONSTRATION_FILES_SUMMARY.md  Dockerfile  PLATFORM_SETUP_COMPLETE.md  README.md  REVOLUTIONARY_ENHANCEMENTS_COMPLETE.md  competitive_advantage_demo.py  competitive_analysis.md  comprehensive_demo.py  docker-compose.yml  final_platform_demo.py  pyproject.toml  requirements.txt  run_dashboard.py  scientist_enhancement_requests.md  test_adaptive_protocols_demo.py  test_causal_design_demo.py  test_explainable_recommendations_demo.py  test_hypothesis_generation_demo.py  test_intelligent_assistant_demo.py  test_multi_fidelity_demo.py  test_transfer_learning_demo.py  test_uncertainty_guided_demo.py
examples/: enhanced_data_management_demo.py  simple_optimization_config.json
src/bayes_for_days/: __init__.py  cli.py
src/bayes_for_days/acquisition/: entropy_search.py  expected_improvement.py  knowledge_gradient.py  thompson_sampling.py
src/bayes_for_days/ai/: hypothesis_generator.py  intelligent_assistant.py
src/bayes_for_days/constraints/: constraint_system.py
src/bayes_for_days/core/: __init__.py  base.py  config.py  experiment.py  optimizer.py  types.py
src/bayes_for_days/dashboard/: app.py
src/bayes_for_days/experimental_design/: __init__.py  adaptive.py  causal_design.py  cost_optimization.py  design_strategies.py  laboratory_constraints.py  multi_stage.py  variables.py
src/bayes_for_days/optimization/: __init__.py  acquisition.py  adaptive_protocols.py  explainable_recommendations.py  hybrid_strategies.py  multi_fidelity.py  multi_objective.py  multi_objective_acquisition.py  optimization_loop.py  pareto.py  transfer_learning.py  uncertainty_guided.py
src/bayes_for_days/utils/: __init__.py  sampling.py
test_results/: integration_tests.xml  unit_tests.xml
tests/: test_runner.py
tests/benchmarks/: test_benchmark_problems.py
tests/integration/: test_full_platform_integration.py
tests/performance/: test_performance_validation.py
tests/unit/: test_acquisition_functions.py  test_experimental_variables.py  test_gaussian_process.py  test_multi_objective.py  test_optimization_loop.py  test_pareto_management.py
